--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,9 @@
 <html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/All%20the%20answer%20logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI搜题助手</title>
+    <title>全部答案搜题</title>
   </head>
   <body>
     <div id="root"></div>
